# paratensor_deprecated

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  genesis_state_2097  genesis_state_2244  genesis_wasm_2097  genesis_wasm_2244  kusama_genesis_head_2242  kusama_genesis_head_2245  kusama_genesis_wasm_2242  kusama_genesis_wasm_2245  kusama_plain_spec_2242.json  kusama_plain_spec_2245.json  kusama_raw_spec_2242.json  kusama_raw_spec_2245.json  latest-raw.json  nobunaga-local-parachain-2000-raw.json  nobunaga-local-parachain-plain.json  nobunaga-para-2000-genesis  nobunaga-para-2000-wasm  paratensor-customized-plain.json  paratensor-customized-raw.json  paratensor-upgrade-2  plain_spec_2097.json  plain_spec_2244.json  raw_spec_2097.json  raw_spec_2244.json  test.ipynb  upgraded-chain.json
.circleci/: config.yml
.github/workflows/: test-code.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/nakamoto/: Cargo.toml
pallets/nakamoto/src/: lib.rs  registration.rs  utils.rs  weights.rs
pallets/nakamoto/tests/: helpers.rs  mock.rs  tests.rs  utils.rs
pallets/paratensor/: Cargo.toml
pallets/paratensor/rpc/: Cargo.toml
pallets/paratensor/rpc/src/: lib.rs
pallets/paratensor/runtime-api/: Cargo.toml
pallets/paratensor/runtime-api/src/: lib.rs
pallets/paratensor/src/: block_step.rs  dao.rs  delegate_info.rs  difficulty.rs  epoch.rs  lib.rs  math.rs  misc.rs  networks.rs  neuron_info.rs  neuron_metadata.rs  registration.rs  serving.rs  staking.rs  subnet_info.rs  utils.rs  weights.rs
pallets/paratensor/tests/: block_step.rs  dao_staking.rs  difficulty.rs  epoch.rs  mock.rs  networks.rs  registration.rs  serving.rs  staking.rs  sudo.rs  weights.rs
pallets/subtensor/: Cargo.toml
pallets/subtensor/src/: lib.rs  registration.rs  staking.rs  step.rs  steps.rs  weights.rs
pallets/subtensor/tests/: mock.rs  registration.rs  staking.rs  step.rs  sudo.rs  tests.rs  weights.rs
pallets/szabo/: Cargo.toml
pallets/szabo/src/: accounts.rs  array.rs  epoch.rs  lib.rs  staking.rs  tempo.rs  utils.rs  utils_accounts.rs  utils_consensus.rs  utils_epoch.rs  utils_misc.rs  utils_tempo.rs  weights.rs
pallets/szabo/tests/: epoch.rs  helpers.rs  mock.rs  staking.rs  tempo.rs  utils.rs  utils_accounts.rs  utils_consensus.rs  utils_epoch.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build_wasms.sh  init.sh
specs/: chain-spec-4val--22Sep-raw.json  cs-col.json  cs-val.json  para-2000-genesis  para-2000-wasm  paratensor-customized-plain.json  paratensor-customized-raw.json  rococo-genesis-state  rococo-genesis-wasm  rococo-local-parachain-2000-raw.json  rococo-local-parachain-plain.json  rococo_genesis.json  rococo_plain_spec.json  rococo_raw_spec.json
specs/rococo_chain/: rococo-custom-raw-9AUG.json
wasms/: para-2000-genesis  para-2000-wasm
