[package]
name = "paratensor-custom-rpc"
version = "0.0.1"
edition = "2021"
authors = ['Cameron Fairchild <https://github.com/camfairchild>']
repository = 'https://github.com/opentensor/paratensor'
description = "A pallet that adds custom RPC calls to paratensor"
license = "MIT"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"

# Substrate packages
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

# local packages

paratensor-custom-rpc-runtime-api = { version = "0.0.1", path = "../runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "paratensor-custom-rpc-runtime-api/std"
]