[package]
name = "paratensor-custom-rpc"
version = "0.0.1"
edition = "2021"
authors = ['Cameron Fairchild <https://github.com/camfairchild>']
repository = 'https://github.com/opentensor/paratensor'
description = "A pallet that adds custom RPC calls to paratensor"
license = "MIT"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
jsonrpc-core = { version = "18.0", default-features = false}
jsonrpc-core-client = { version = "18.0", default-features = false}
jsonrpc-derive = { version = "18.0", default-features = false}
serde = { version = "1.0.132", features = ["derive"], default-features = false }

# Substrate packages
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20" }

# local packages

paratensor-custom-rpc-runtime-api = { version = "0.0.1", path = "../runtime-api", default-features = false }
pallet-paratensor = { version = "0.0.1-dev", path = "../../paratensor", default-features = false }

[features]
default = ["std"]
std = [
  "sp-api/std",
  "sp-runtime/std",
  "paratensor-custom-rpc-runtime-api/std"
]