[package]
name = "paratensor-custom-rpc-runtime-api"
version = "0.0.1"
edition = "2021"
authors = ['Cameron Fairchild <https://github.com/camfairchild>']
repository = 'https://github.com/opentensor/paratensor'
description = "A pallet that adds a custom runtime API to paratensor"
license = "MIT"
publish = false

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.20", default_features = false }

# local 
pallet-paratensor = { version = "0.0.1-dev", path = "../../paratensor", default-features = false }

[features]
default = ["std"]
std = [
	"sp-api/std",
]